--- a/payut.html
+++ b/payut.html
@@ -21,6 +21,16 @@
             <input type="text" name="Amount">
             <br>
             <br>
+             <a href="payop.html">
+                Pay Option
+            </a>
+            &nbsp;
+             &nbsp; 
+             &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
             <a href="payment.html">
             <button type="button">Cancel</button>
             </a> 
